# aurora-devops

./: .dockerignore  .flake8  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  build_docker_image.yaml  deploy.yaml  docker-compose.yml  pyproject.toml
app/: config.py  misc.py  setup.py
app/filters/: __init__.py
app/formatters/markup/: kp.py  lang.py  location.py
app/formatters/messages/: base.py  kp.py  lang.py  location.py
app/handlers/: __init__.py  base.py  kp.py  lang.py  location.py  superuser.py
app/middlewares/: __init__.py  acl.py  i18n.py
app/models/: chat.py  db.py  user.py
app/services/: apscheduller.py  healthcheck.py
app/utils/: before_start.py  chat_admin.py  chat_settings.py  cli.py  desired_kp_solver.py  executor.py  geonames.py  swpc.py  updater.py  weather.py
locales/: bot.pot
locales/en/LC_MESSAGES/: bot.po
locales/ru/LC_MESSAGES/: bot.po
migrations/: env.py
migrations/versions/: 2cdcb2a2c589_chat_settings_and_user_conversation_flag.py  57bc88e06e52_rename_superuser_column_and_add_is_.py  6a4925dc93f3_updated_chats.py  c7025892455f_add_superuser_column.py  d6553c0e950b_add_do_not_disturb_column.py
tests/: desired_kp_solver_test.py
