[tool.poetry]
name = "Aurora"
description = ""
version = "0.1.0"
authors = ["Aleksandr Alekseev <https://github.com/aalekseevx>"]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
aiogram = "^2.11.2"
click = "^7.1.2"
loguru = "^0.5.3"
uvloop = "^0.14.0"
aiohttp = "^3.7.3"
envparse = "^0.2.0"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
psycopg2-binary = "^2.8.6"
asyncpg = "^0.21.0"
gino = "^1.0.1"
alembic = "^1.5.4"
aioredis = "^1.3.1"
cchardet = "^2.1.7"
aiodns = "^2.0.0"
tenacity = "^6.3.1"
APScheduler = "^3.7.0"
redis = "^3.5.3"
aiohttp_healthcheck = "^1.3.1"
requests = "^2.25.1"
taskipy = "^1.6.0"
emoji = "^1.2.0"
aacgmv2 = "^2.6.2"
pytz = "^2021.1"
pytest = "^6.2.2"
coverage = "^5.4"

[tool.taskipy.tasks]
handle = "python3 cli.py"
test = "python3 -m coverage run -m pytest tests/ && coverage xml -o cobertura.xml"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
ipython = "^7.20.0"
aiohttp_autoreload = "^0.0.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
